# specfact-cli-modules

./: .coderabbit.yaml  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  ALLOWED_IMPORTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  publish_bundle_selection.py  pyproject.toml  pyrightconfig.json  requirements-docs-ci.txt
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: augmentation_metadata.md  bug_report.md  change_proposal.md
.github/workflows/: docs-pages.yml  docs-review.yml  pr-orchestrator.yml  publish-modules.yml  quality-gates.yml  sign-modules-on-approval.yml  sign-modules.yml
docs/: CNAME  Gemfile  _config.yml  index.md  module-publishing-guide.md  quickstart-ai-bloat.md
docs/_data/: nav.yml
docs/_includes/: breadcrumbs.html  expertise-filter.html  search.html  sidebar-nav.html  theme-toggle.html
docs/_layouts/: default.html
docs/adapters/: azuredevops.md  backlog-adapter-patterns.md  github.md
docs/agent-rules/: 05-non-negotiable-checklist.md  10-session-bootstrap.md  20-repository-context.md  30-worktrees-and-branching.md  40-openspec-and-tdd.md  50-quality-gates-and-review.md  60-github-change-governance.md  70-release-commit-and-docs.md  80-current-guidance-catalog.md  INDEX.md
docs/assets/: main.scss
docs/assets/js/: theme.js  (+3 more)
docs/authoring/: adapter-development.md  creating-custom-bridges.md  custom-registries.md  extending-projectbundle.md  module-development.md  module-signing.md  publishing-modules.md
docs/getting-started/: README.md  choose-your-modules.md  first-steps.md  installation.md  module-bootstrap-checklist.md  tutorial-backlog-quickstart-demo.md  tutorial-backlog-refine-ai-ide.md  tutorial-daily-standup-sprint-review.md  tutorial-openspec-speckit.md
docs/guides/: README.md  adapter-development.md  agile-scrum-workflows.md  ai-ide-workflow.md  backlog-delta-commands.md  backlog-dependency-analysis.md  backlog-refinement.md  brownfield-engineer.md  brownfield-examples.md  brownfield-faq-and-roi.md  brownfield-faq.md  brownfield-journey.md  brownfield-modernization.md  brownfield-roi.md  ci-cd-pipeline.md  command-chains.md  common-tasks.md  competitive-analysis.md  contract-testing-workflow.md  copilot-mode.md  creating-custom-bridges.md  cross-module-chains.md  custom-field-mapping.md  custom-registries.md  daily-devops-routine.md  devops-adapter-integration.md  dual-stack-enrichment.md  extending-projectbundle.md  ide-integration.md  import-features.md  installation.md  installing-modules.md  integrations-overview.md  marketplace.md  migration-0.16-to-0.19.md  migration-cli-reorganization.md  migration-guide.md  module-development.md  module-marketplace.md  module-signing-and-key-rotation.md  (+16 more)
docs/integrations/: devops-adapter-overview.md
docs/modules/: code-review.md
docs/reference/: README.md  architecture.md  authentication.md  bridge-registry.md  command-syntax-policy.md  commands.md  debug-logging.md  dependency-resolution.md  directory-structure.md  documentation-url-contract.md  feature-keys.md  modes.md  module-categories.md  module-contracts.md  module-security.md  parameter-standard.md  projectbundle-schema.md  schema-versioning.md  specmatic.md  telemetry.md  thorough-codebase-validation.md
docs/team-and-enterprise/: agile-scrum-setup.md  enterprise-config.md  multi-repo.md  team-collaboration.md
openspec/: CHANGE_ORDER.md  config.yaml
openspec/parking-lot/: README.md
registry/: index.json
registry/modules/: specfact-backlog-0.40.17.tar.gz.sha256  specfact-backlog-0.40.19.tar.gz.sha256  specfact-backlog-0.40.20.tar.gz.sha256  specfact-backlog-0.41.11.tar.gz.sha256  specfact-backlog-0.41.12.tar.gz.sha256  specfact-backlog-0.41.14.tar.gz.sha256  specfact-backlog-0.41.16.tar.gz.sha256  specfact-backlog-0.41.17.tar.gz.sha256  specfact-backlog-0.41.2.tar.gz.sha256  specfact-backlog-0.41.21.tar.gz.sha256  specfact-backlog-0.41.23.tar.gz.sha256  specfact-backlog-0.41.24.tar.gz.sha256  specfact-backlog-0.41.25.tar.gz.sha256  specfact-backlog-0.41.3.tar.gz.sha256  specfact-backlog-0.41.4.tar.gz.sha256  specfact-backlog-0.41.5.tar.gz.sha256  specfact-backlog-0.41.7.tar.gz.sha256  specfact-backlog-0.41.9.tar.gz.sha256  specfact-code-review-0.41.1.tar.gz.sha256  specfact-code-review-0.41.3.tar.gz.sha256  specfact-code-review-0.41.4.tar.gz.sha256  specfact-code-review-0.41.5.tar.gz.sha256  specfact-code-review-0.41.6.tar.gz.sha256  specfact-code-review-0.41.7.tar.gz.sha256  specfact-code-review-0.42.0.tar.gz.sha256  specfact-code-review-0.42.1.tar.gz.sha256  specfact-code-review-0.42.3.tar.gz.sha256  specfact-code-review-0.43.0.tar.gz.sha256  specfact-code-review-0.43.1.tar.gz.sha256  specfact-code-review-0.44.0.tar.gz.sha256  specfact-code-review-0.44.3.tar.gz.sha256  specfact-code-review-0.45.1.tar.gz.sha256  specfact-code-review-0.45.2.tar.gz.sha256  specfact-code-review-0.45.3.tar.gz.sha256  specfact-code-review-0.45.4.tar.gz.sha256  specfact-code-review-0.46.0.tar.gz.sha256  specfact-code-review-0.46.1.tar.gz.sha256  specfact-code-review-0.46.3.tar.gz.sha256  specfact-code-review-0.46.4.tar.gz.sha256  specfact-code-review-0.47.0.tar.gz.sha256  (+46 more)
registry/signatures/: specfact-backlog-0.39.0.tar.sig  specfact-backlog-0.40.0.tar.sig  specfact-backlog-0.40.1.tar.sig  (+145 more)
scripts/: __init__.py  check-bundle-imports.py  check-docs-commands.py  check-prompt-commands.py  docs_site_validation.py  ensure_github_hierarchy_subissues.py  git-branch-module-signature-flag.sh  link_dev_module.py  pre-commit-quality-checks.sh  pre-commit-verify-modules-signature.sh  pre_commit_code_review.py  publish-module.py  publish_module.py  sign-modules.py  sync-dev-from-main.sh  sync_github_hierarchy_cache.py  sync_registry_from_package.py  validate_agent_rule_applies_when.py  verify-modules-signature.py
tests/: __init__.py  conftest.py
tools/: contract_first_smart_test.py  dev_bootstrap_support.py  ensure_core_dependency.py  run_basedpyright.py  smart_test_coverage.py  validate_cli_contracts.py  validate_repo_manifests.py
(+675 files in other folders)
